[gd_scene load_steps=9 format=3 uid="uid://c0qixxmevx8go"]

[ext_resource type="Texture2D" uid="uid://b27s2ewdnj4u2" path="res://art/playerGrey_up1.png" id="1_hqtel"]
[ext_resource type="Script" uid="uid://cq86gnov88vc0" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://dfrtvm2y0bmj5" path="res://art/playerGrey_up2.png" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://cofhnjbfkdag4" path="res://art/playerGrey_walk1.png" id="3_2hs0m"]
[ext_resource type="Texture2D" uid="uid://bl4f7t7ptm2pu" path="res://art/playerGrey_walk2.png" id="4_1jxqw"]
[ext_resource type="Script" uid="uid://lv1lpdw30qet" path="res://player_camera.gd" id="6_2hs0m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hqtel")
}, {
"duration": 1.0,
"texture": ExtResource("2_sweqy")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2hs0m")
}, {
"duration": 1.0,
"texture": ExtResource("4_1jxqw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b26j0"]
radius = 27.0
height = 68.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_sweqy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b26j0")

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="PlayerCamera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
script = ExtResource("6_2hs0m")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_b26j0")

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
